--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.4
   chopper: ^7.1.1+1
+  intl: ^0.19.0
   webview_flutter: ^4.7.0
   google_fonts: ^6.2.1
-  intl: ^0.19.0
+  dartdoc: ^8.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
